# rp2040_freertos_amp_demo

./: README.md
freertos/: CMakeLists.txt
freertos/kernel/: CMakeLists.txt
freertos/kernel/custom/multiple/: FreeRTOSConfig.h  main.c.tmp  port.c  portmacro.h
freertos/kernel/portable/GCC/ARM_CM0/: port.c
freertos/kernel/portable/GCC/ARM_CM0_Multiple/: port.c
freertos/src/: main.c
